{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 38,
  "lineage": "abebabc1-2a71-eac3-f7d3-b22f4c14ca83",
  "resources": [
    {
      "module": "module.devopsb16-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:251107607969:instance/i-042914411de33c767",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-042914411de33c767",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awswebservice",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0218a5afc33a4a531",
            "private_dns": "ip-10-120-1-238.ec2.internal",
            "private_ip": "10.120.1.238",
            "public_dns": "ec2-54-85-84-41.compute-1.amazonaws.com",
            "public_ip": "54.85.84.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cedca269caab6b4b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e54bd74617bed7c0",
            "tags": {
              "Name": "devopsb16-testvpc-public-server-1}"
            },
            "tags_all": {
              "Name": "devopsb16-testvpc-public-server-1}"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-058cf09ed2ef78096"
            ]
          },
          "dependencies": [
            "module.devopsb16-testvpc.aws_security_group.allow_all",
            "module.devopsb16-testvpc.aws_subnet.publicsubnets",
            "module.devopsb16-testvpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:251107607969:instance/i-0fb25f7730d03bc47",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb25f7730d03bc47",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awswebservice",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f64a37c4d9cbac8b",
            "private_dns": "ip-10-120-2-134.ec2.internal",
            "private_ip": "10.120.2.134",
            "public_dns": "ec2-54-175-250-210.compute-1.amazonaws.com",
            "public_ip": "54.175.250.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e379604e6509a830",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d9f6644f68d6cdfb",
            "tags": {
              "Name": "devopsb16-testvpc-public-server-2}"
            },
            "tags_all": {
              "Name": "devopsb16-testvpc-public-server-2}"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-058cf09ed2ef78096"
            ]
          },
          "dependencies": [
            "module.devopsb16-testvpc.aws_security_group.allow_all",
            "module.devopsb16-testvpc.aws_subnet.publicsubnets",
            "module.devopsb16-testvpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:251107607969:instance/i-0a2822f4dacb1f0b0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a2822f4dacb1f0b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awswebservice",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fa5f26768999ccbd",
            "private_dns": "ip-10-120-3-50.ec2.internal",
            "private_ip": "10.120.3.50",
            "public_dns": "ec2-52-90-74-5.compute-1.amazonaws.com",
            "public_ip": "52.90.74.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02b7295c2a19cd29a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ad63122e234ba24",
            "tags": {
              "Name": "devopsb16-testvpc-public-server-3}"
            },
            "tags_all": {
              "Name": "devopsb16-testvpc-public-server-3}"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-058cf09ed2ef78096"
            ]
          },
          "dependencies": [
            "module.devopsb16-testvpc.aws_security_group.allow_all",
            "module.devopsb16-testvpc.aws_subnet.publicsubnets",
            "module.devopsb16-testvpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.devopsb16-testvpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251107607969:internet-gateway/igw-0a2326f83fcbe9a87",
            "id": "igw-0a2326f83fcbe9a87",
            "owner_id": "251107607969",
            "tags": {
              "Name": "devopsb16-testigw"
            },
            "tags_all": {
              "Name": "devopsb16-testigw"
            },
            "vpc_id": "vpc-0362e9d9757b396ab"
          },
          "dependencies": [
            "module.devopsb16-testvpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.devopsb16-testvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251107607969:route-table/rtb-05ff898e49299b501",
            "id": "rtb-05ff898e49299b501",
            "owner_id": "251107607969",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_Routing_Table"
            },
            "tags_all": {
              "Name": "private_Routing_Table"
            },
            "vpc_id": "vpc-0362e9d9757b396ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.devopsb16-testvpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.devopsb16-testvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251107607969:route-table/rtb-04a6b717215935c47",
            "id": "rtb-04a6b717215935c47",
            "owner_id": "251107607969",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a2326f83fcbe9a87",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Main_routing_table"
            },
            "tags_all": {
              "Name": "Main_routing_table"
            },
            "vpc_id": "vpc-0362e9d9757b396ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.devopsb16-testvpc.aws_internet_gateway.default",
            "module.devopsb16-testvpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.devopsb16-testvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076a292acc34a7ef0",
            "route_table_id": "rtb-05ff898e49299b501",
            "subnet_id": "subnet-090c44279ead85874"
          },
          "dependencies": [
            "module.devopsb16-testvpc.aws_vpc.default",
            "module.devopsb16-testvpc.aws_route_table.terraform-private",
            "module.devopsb16-testvpc.aws_subnet.privatesubnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9f1766e752c2c43",
            "route_table_id": "rtb-05ff898e49299b501",
            "subnet_id": "subnet-05bb95fc8a592ef96"
          },
          "dependencies": [
            "module.devopsb16-testvpc.aws_route_table.terraform-private",
            "module.devopsb16-testvpc.aws_subnet.privatesubnets",
            "module.devopsb16-testvpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00331f71e1ed26580",
            "route_table_id": "rtb-05ff898e49299b501",
            "subnet_id": "subnet-0f29083225d93259b"
          },
          "dependencies": [
            "module.devopsb16-testvpc.aws_vpc.default",
            "module.devopsb16-testvpc.aws_route_table.terraform-private",
            "module.devopsb16-testvpc.aws_subnet.privatesubnets"
          ]
        }
      ]
    },
    {
      "module": "module.devopsb16-testvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0267b06fcf51fe7fb",
            "route_table_id": "rtb-04a6b717215935c47",
            "subnet_id": "subnet-0e54bd74617bed7c0"
          },
          "dependencies": [
            "module.devopsb16-testvpc.aws_internet_gateway.default",
            "module.devopsb16-testvpc.aws_route_table.terraform-public",
            "module.devopsb16-testvpc.aws_subnet.publicsubnets",
            "module.devopsb16-testvpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa296e61a9e030dd",
            "route_table_id": "rtb-04a6b717215935c47",
            "subnet_id": "subnet-0d9f6644f68d6cdfb"
          },
          "dependencies": [
            "module.devopsb16-testvpc.aws_internet_gateway.default",
            "module.devopsb16-testvpc.aws_route_table.terraform-public",
            "module.devopsb16-testvpc.aws_subnet.publicsubnets",
            "module.devopsb16-testvpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05991fe1840b7d129",
            "route_table_id": "rtb-04a6b717215935c47",
            "subnet_id": "subnet-08ad63122e234ba24"
          },
          "dependencies": [
            "module.devopsb16-testvpc.aws_route_table.terraform-public",
            "module.devopsb16-testvpc.aws_subnet.publicsubnets",
            "module.devopsb16-testvpc.aws_vpc.default",
            "module.devopsb16-testvpc.aws_internet_gateway.default"
          ]
        }
      ]
    },
    {
      "module": "module.devopsb16-testvpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251107607969:security-group/sg-058cf09ed2ef78096",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058cf09ed2ef78096",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "251107607969",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0362e9d9757b396ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.devopsb16-testvpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.devopsb16-testvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251107607969:subnet/subnet-090c44279ead85874",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.120.10.0/24",
            "id": "subnet-090c44279ead85874",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251107607969",
            "tags": {
              "Name": "devopsb16-testvpc-private_subnets_1"
            },
            "tags_all": {
              "Name": "devopsb16-testvpc-private_subnets_1"
            },
            "vpc_id": "vpc-0362e9d9757b396ab"
          },
          "dependencies": [
            "module.devopsb16-testvpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251107607969:subnet/subnet-05bb95fc8a592ef96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.120.20.0/24",
            "id": "subnet-05bb95fc8a592ef96",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251107607969",
            "tags": {
              "Name": "devopsb16-testvpc-private_subnets_2"
            },
            "tags_all": {
              "Name": "devopsb16-testvpc-private_subnets_2"
            },
            "vpc_id": "vpc-0362e9d9757b396ab"
          },
          "dependencies": [
            "module.devopsb16-testvpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251107607969:subnet/subnet-0f29083225d93259b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.120.30.0/24",
            "id": "subnet-0f29083225d93259b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251107607969",
            "tags": {
              "Name": "devopsb16-testvpc-private_subnets_3"
            },
            "tags_all": {
              "Name": "devopsb16-testvpc-private_subnets_3"
            },
            "vpc_id": "vpc-0362e9d9757b396ab"
          },
          "dependencies": [
            "module.devopsb16-testvpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.devopsb16-testvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251107607969:subnet/subnet-0e54bd74617bed7c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.120.1.0/24",
            "id": "subnet-0e54bd74617bed7c0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251107607969",
            "tags": {
              "Name": "devopsb16-testvpc-public_subnets_1"
            },
            "tags_all": {
              "Name": "devopsb16-testvpc-public_subnets_1"
            },
            "vpc_id": "vpc-0362e9d9757b396ab"
          },
          "dependencies": [
            "module.devopsb16-testvpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251107607969:subnet/subnet-0d9f6644f68d6cdfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.120.2.0/24",
            "id": "subnet-0d9f6644f68d6cdfb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251107607969",
            "tags": {
              "Name": "devopsb16-testvpc-public_subnets_2"
            },
            "tags_all": {
              "Name": "devopsb16-testvpc-public_subnets_2"
            },
            "vpc_id": "vpc-0362e9d9757b396ab"
          },
          "dependencies": [
            "module.devopsb16-testvpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251107607969:subnet/subnet-08ad63122e234ba24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.120.3.0/24",
            "id": "subnet-08ad63122e234ba24",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251107607969",
            "tags": {
              "Name": "devopsb16-testvpc-public_subnets_3"
            },
            "tags_all": {
              "Name": "devopsb16-testvpc-public_subnets_3"
            },
            "vpc_id": "vpc-0362e9d9757b396ab"
          },
          "dependencies": [
            "module.devopsb16-testvpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.devopsb16-testvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251107607969:vpc/vpc-0362e9d9757b396ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.120.0.0/16",
            "default_network_acl_id": "acl-07d31604cb2239d6a",
            "default_route_table_id": "rtb-05842154cc4dec76e",
            "default_security_group_id": "sg-0b58afd9985952f0c",
            "dhcp_options_id": "dopt-04ce827e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0362e9d9757b396ab",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05842154cc4dec76e",
            "owner_id": "251107607969",
            "tags": {
              "Name": "devopsb16-testvpc",
              "Owner": "Sreeharsha Veerapalli",
              "environment": "prod"
            },
            "tags_all": {
              "Name": "devopsb16-testvpc",
              "Owner": "Sreeharsha Veerapalli",
              "environment": "prod"
            }
          }
        }
      ]
    }
  ]
}